--- a/GymVault/templates/shop/add_category.html
+++ b/GymVault/templates/shop/add_category.html
@@ -6,18 +6,20 @@
     <title>Add Category</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'shop/add_category.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 </head>
 <body>
     <div class="sidebar">
         <h2>Gym Vault</h2>
-        <a href="shop_home">Home</a>
-        <a href="add_brand">Add Brand</a>
-        <a href="s_category">Add Category</a>
-        <a href="add_e">Equipment</a>
-        <a href="add_s">Supplements</a>
-        <a href="view_pro">View supplements</a>
-        <a href="view_eqp">View equipments</a>
-        <a href="logout">Logout</a>
+        <a href="shop_home" class="active"><i class="fas fa-home"></i><span>Home</span></a>
+        <a href="add_brand"><i class="fas fa-tag"></i><span>Add Brand</span></a>
+        <a href="s_category"><i class="fas fa-list"></i><span>Add Category</span></a>
+        <a href="add_e"><i class="fas fa-dumbbell"></i><span>Equipment</span></a>
+        <a href="add_s"><i class="fas fa-pills"></i><span>Supplements</span></a>
+        <a href="view_pro"><i class="fas fa-eye"></i><span>View Supplements</span></a>
+        <a href="view_eqp"><i class="fas fa-search"></i><span>View Equipment</span></a>
+        <a href="logout"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a>
     </div>
 
     <div class="main-content">
