--- a/GymVault/templates/user/buy.html
+++ b/GymVault/templates/user/buy.html
@@ -42,9 +42,8 @@
               
               <!-- My Cart -->
               <li class="nav-item">
-                <a class="nav-link" href="../cart">
+                <a class="nav-link" href="../../cart">
                   My Cart
-                  <span class="badge bg-danger" id="cart-count">0</span> <!-- Cart count -->
                 </a>
               </li>
               
@@ -155,12 +154,14 @@
                         <div class="d-grid gap-2">
                                 {% csrf_token %}
                                 <div class="d-flex gap-2">
-                                    <a href="/add_cart/{{ stock.id }}/" class="btn btn-outline-primary flex-grow-1 py-3">
+                                    <a href="/add_cart/{{ stock.id }}?weight={{ selected_weight_id }}" class="btn btn-outline-primary flex-grow-1 py-3">
                                         <i class="bi bi-cart-plus"></i> Add to Cart
                                     </a>
-                                    <button type="submit" class="btn btn-primary flex-grow-1 py-3">
+                                    
+                                    <a href="/buy_product/{{ stock.id }}?weight={{ selected_weight_id }}" class="btn btn-primary flex-grow-1 py-3">
                                         <i class="bi bi-lightning"></i> Buy Now
-                                    </button>
+                                    </a>
+                                    
                                 </div>
                         </div>
                     </div>
@@ -171,15 +172,15 @@
 
     <footer class="footer mt-auto py-4">
         <div class="container">
-            <div class="row">
+            <div class="row footer-content justify-content-between">
                 <!-- About Us -->
-                <div class="col-lg-2 col-md-3 col-sm-6">
+                <div class="col-lg-3 col-md-3 mb-4">
                     <h5>About Us</h5>
                     <p>Gym Vault offers the best supplements, equipment, and accessories to help you achieve your fitness goals. Premium quality, every time.</p>
                 </div>
     
                 <!-- Quick Links -->
-                <div class="col-lg-3 col-md-3 col-sm-6 ">
+                <div class="col-lg-3 col-md-3 mb-4">
                     <h5>Quick Links</h5>
                     <ul>
                         <li><a href="/">Home</a></li>
@@ -190,7 +191,7 @@
                 </div>
     
                 <!-- Social Media -->
-                <div class="col-lg-3 col-md-3 col-sm-6">
+                <div class="col-lg-3 col-md-3 mb-4">
                     <h5>Follow Us</h5>
                     <div class="social-icons">
                         <a href="#"><img src="{% static 'img/i1.png' %}"></a>
@@ -199,17 +200,8 @@
                         <a href="#"><img src="{% static 'img/il.png' %}" alt="LinkedIn"></a>
                     </div>
                 </div>
-    
-                <!-- Newsletter -->
-                <div class="news col-lg-3 col-md-3 col-sm-6">
-                    <h5>Newsletter</h5>
-                    <p>Sign up to stay updated on the latest deals and products.</p>
-                    <form action="/subscribe" method="POST">
-                        <input type="email" name="email" placeholder="Enter your email" required>
-                        <button type="submit">Subscribe</button>
-                    </form>
-                </div>
             </div>
+            
             <div class="row mt-3">
                 <div class="col text-center">
                     <p>&copy; 2024 Gym Vault. All Rights Reserved.</p>
@@ -217,7 +209,6 @@
             </div>
         </div>
     </footer>
-
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
