--- a/GymVault/templates/user/home.html
+++ b/GymVault/templates/user/home.html
@@ -44,7 +44,6 @@
           <li class="nav-item">
             <a class="nav-link" href="../cart">
               My Cart
-              <span class="badge bg-danger" id="cart-count">0</span> <!-- Cart count -->
             </a>
           </li>
           
@@ -143,6 +142,8 @@
         <div class="row">
             {% for item in equipment_with_stock %}
                 <div class="col-md-3">
+                  <a href="buy_p/{{ item.stock.id }}" style="text-decoration: none;">
+
                     <div class="card">
                         <img src="{{ item.equipment.img.url }}" class="card-img-top" alt="{{ item.equipment.name }}">
                         <div class="card-body">
@@ -151,6 +152,7 @@
                             <a href="#" class="btn btn-primary">View</a>
                         </div>
                     </div>
+                  </a>
                 </div>
             {% endfor %}
         </div>
@@ -158,15 +160,15 @@
     
     <footer class="footer mt-auto py-4">
       <div class="container">
-          <div class="row">
+          <div class="row footer-content justify-content-between">
               <!-- About Us -->
-              <div class="col-lg-2 col-md-3 col-sm-6">
+              <div class="col-lg-3 col-md-3 mb-4">
                   <h5>About Us</h5>
                   <p>Gym Vault offers the best supplements, equipment, and accessories to help you achieve your fitness goals. Premium quality, every time.</p>
               </div>
   
               <!-- Quick Links -->
-              <div class="col-lg-3 col-md-3 col-sm-6 ">
+              <div class="col-lg-3 col-md-3 mb-4">
                   <h5>Quick Links</h5>
                   <ul>
                       <li><a href="/">Home</a></li>
@@ -177,7 +179,7 @@
               </div>
   
               <!-- Social Media -->
-              <div class="col-lg-3 col-md-3 col-sm-6">
+              <div class="col-lg-3 col-md-3 mb-4">
                   <h5>Follow Us</h5>
                   <div class="social-icons">
                       <a href="#"><img src="{% static 'img/i1.png' %}"></a>
@@ -186,17 +188,8 @@
                       <a href="#"><img src="{% static 'img/il.png' %}" alt="LinkedIn"></a>
                   </div>
               </div>
-  
-              <!-- Newsletter -->
-              <div class="news col-lg-3 col-md-3 col-sm-6">
-                  <h5>Newsletter</h5>
-                  <p>Sign up to stay updated on the latest deals and products.</p>
-                  <form action="/subscribe" method="POST">
-                      <input type="email" name="email" placeholder="Enter your email" required>
-                      <button type="submit">Subscribe</button>
-                  </form>
-              </div>
           </div>
+          
           <div class="row mt-3">
               <div class="col text-center">
                   <p>&copy; 2024 Gym Vault. All Rights Reserved.</p>
@@ -204,9 +197,6 @@
           </div>
       </div>
   </footer>
-
-    
-    
       
       <!-- Add this Bootstrap 5 CDN for dropdowns and other functionalities -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
